445-rout-get-aggregation: swagger
